--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
             const state = reactive({ name: "hxh", age: [20, 21] });
             const app = document.getElementById("app");
             effect(() => {
-                app.innerHTML = state.name + state.age
+                app.innerHTML = state.name + state.age;
             });
             setTimeout(() => {
-                state.name = "change";
-                state.age[2] = 18
+                state.age = [...state.age, 22];
             }, 500);
         </script>
     </body>
